<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Tombol SOS dan Tidak Ada Masalah -->

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:padding="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:contentDescription="logotransparent"
            android:src="@drawable/logo2"
            tools:ignore="HardcodedText" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="15sp"
                android:text="Komunikasi Tanpa Batas untuk Teman Tuli."
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="&quot;Solusi Cerdas untuk Komunikasi Visual.&quot;"
                android:textSize="12sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/body"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="128dp"
        android:layout_marginBottom="87dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <LinearLayout
            android:id="@+id/sos_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sos_button"
                android:layout_width="0dp"
                android:layout_height="59dp"
                android:layout_weight="1"
                android:text="@string/sos"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:backgroundTint="@color/colorError"
                app:cornerRadius="5dp"
                app:icon="@android:drawable/stat_sys_warning"
                app:iconPadding="8dp"
                app:rippleColor="@color/colorRipple"
                app:strokeColor="@color/colorStroke" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/no_problem_button"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:text="@string/tidak_ada_masalah"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:backgroundTint="@color/colorPrimary"
                app:cornerRadius="5dp"
                app:rippleColor="@color/colorRipple"
                app:strokeColor="@color/colorStroke" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageViewGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/gamepict"
            app:layout_constraintDimensionRatio="H,2:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sos_warning"
            app:srcCompat="@drawable/ngapakspict" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tombolplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mainkan"
            android:textColor="#007E6B"
            app:backgroundTint="#00FFFFFF"
            app:cornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageViewGame"
            app:strokeColor="#007E6B"
            app:strokeWidth="1dp" />

        <ImageView
            android:id="@+id/imageViewTranslator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/translatorpict"
            app:layout_constraintDimensionRatio="H,2:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tombolplay"
            app:srcCompat="@drawable/translatorpict" />

        <Button
            android:id="@+id/tomboltranslate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/translate"
            android:textColor="#007E6B"
            app:backgroundTint="#00FFFFFF"
            app:cornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageViewGame"
            app:strokeColor="#007E6B"
            app:strokeWidth="1dp"
            tools:ignore="HardcodedText" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>